2001-08-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* ld-selective/selective.exp: Return if target is `vax-*-ultrix*'.
	Continue with other tests when there is a compilation error.

2001-08-01  Loren J. Rittle  <ljrittle@acm.org>

	* ld-cdtest/cdtest-nrv.dat: New file.
	* ld-cdtest/cdtest.exp: Do not require any exception support
	library.  Check results against NRV.

2001-08-01  Loren J. Rittle  <ljrittle@acm.org>

	* ld-srec/srec.exp: Do not require any exception support
	library.

2001-07-27  H.J. Lu  <hjl@gnu.org>

	* ld-selective/selective.exp: Fix the error in the last change.

2001-07-24  Loren J. Rittle  <ljrittle@acm.org>

	* ld-selective/selective.exp: Support g++ V3 ABI (along side
	the old ABI).  Make comparisons against normalized (to
	V3-style) demangled nm output.

2001-07-24  Alan Modra  <amodra@bigpond.net.au>

	* config/default.exp (ld_nm): Add "nmflags" arg.
	* lib/ld-lib.exp (default_ld_nm): Likewise.
	* ld-empic/empic.exp: Adjust call to ld_nm.
	* ld-scripts/defined.exp: Likewise.
	* ld-scripts/script.exp: Likewise.
	* ld-scripts/sizeof.exp: Likewise.
	* ld-selective/selective.exp: Likewise.
	* ld-sh/sh.exp: Likewise.

2001-07-12  H.J. Lu  <hjl@gnu.org>

	* ld-selective/selective.exp: Mark selective1, selective2,
	selective4 and selective5 xfail on alpha*-*.

2001-06-13  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/default.exp (AS, GASP, OBJDUMP, NM, NMFLAGS, OBJCOPY,
	OBJCOPYFLAGS, READELF, READELFFLAGS, LD, LDFLAGS): Provide
	default.

	* lib/ld-lib.exp (run_dump_test): Import from gas testsuite.  Add
	new options "ld", "source", "xfail", "target", "notarget" and
	"error".  Support the runtest_file_p "*.exp=testname" feature.
	(slurp_options, regexp_diff, file_contents, verbose_eval): Import
	from gas testsuite.

2001-06-12  Martin Schwidefsky <schwidefsky@de.ibm.com>

	* testsuite/ld-undefined/undefined.exp: Correct setup_xfail rule.

2001-06-06  H.J. Lu  <hjl@gnu.org>
