@@ -1,6 +1,7 @@
 NOCROSSREFS ( .text .data )
 SECTIONS
 {
+  .toc  : { *(.toc) }
   .text : { tmpdir/cross1.o }
   .data : { tmpdir/cross2.o }
 }
