@@ -2,5 +2,5 @@ NOCROSSREFS ( .text .data )
 SECTIONS
 {
   .text : { *(.text) *(.text.*) *(.pr) }
-  .data : { *(.data) *(.data.*) *(.sdata) *(.rw) *(.tc0) *(.tc) }
+  .data : { *(.data) *(.data.*) *(.sdata) *(.rw) *(.tc0) *(.tc) *(.toc) }
 }
