@@ -49,7 +49,8 @@ set phdrs_regexp \
 # On a 64 bit ELF format, we need different numbers.
 if { [istarget alpha*-*-*] || [istarget "ia64*-*-*"]
     || [istarget "hppa*64*-*-*"] || [istarget "x86_64*-*-*"]
-    || [istarget "s390x*-*-*"] || [istarget "sparc64*-*-*"]} then {
+    || [istarget "s390x*-*-*"] || [istarget "sparc64*-*-*"]
+    || [istarget "powerpc64*-*-*"] || [istarget "*-*-*elf64*"] } then {
   set phdrs_regexp \
 ".*Program Header:.*PHDR *off *0x00*40 *vaddr *0x00*800040 *paddr *0x00*800040.*filesz *0x0\[0-9a-f\]* *memsz *0x0\[0-9a-f\]* flags r--.*LOAD *off *0x00* *vaddr *0x00*800000 *paddr *0x00*800000.*filesz *0x00*\[0-9a-f\]* *memsz *0x0\[0-9a-f\]* *flags r-x.*LOAD *off *0x0\[0-9a-f\]* *vaddr *0x00*80*\[0-9a-f\]* *paddr *0x00*80*\[0-9a-f\]*.*filesz *0x0\[0-9a-f\]* *memsz *0x0\[0-9a-f\]* *flags *rw-.*"
 }
