@@ -282,6 +282,9 @@ proc run_srec_test { test objs } {
     
     if { ![ld_simple_link $ld tmpdir/sr1 "$flags $objs"] \
 	 || ![ld_simple_link $ld tmpdir/sr2.sr "$flags --oformat srec $objs"] } {
+	# PowerPc64 srec linker can't handle .toc relocations.
+	setup_xfail "powerpc64*-*-*"
+	setup_xfail "powerpc*-*-*64*"
 	setup_xfail "hppa*-*-*elf*"
 	fail $test
 	return
